--- a/index.html
+++ b/index.html
@@ -5,24 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <!-- <section>
-    <div class="top-section">
-        <img src="top-logos.png" alt="Partners logo">
-        <div class="menu">
-            <a class="menu-item" href="#">Stores</a>
-            <img src="stores-logo.png" alt="Stores logo">
-            <a class="menu-item" href="#">Account</a>
-            <img src="account-logo.png" alt="Account logo"> 
-            <a class="menu-item" href="#">Rewards</a>
-            <img src="rewards-logo.png" alt="Rewards logo"> 
-            <a class="menu-item" href="#">Favourites</a>
-            <img src="favourites-logo.png" alt="Favourites logo">  
-            <a class="menu-item" href="#">My Cart</a>
-            <img src="cart-logo.png" alt="Cart logo"> 
-          </div>
-    </div>
-   </section> -->
-
+  
 <section>
    <div class="top-section">
     <img src="top-logos.png" alt="Partners logo">
@@ -54,9 +37,22 @@
     <hr class="divider">
 
     <section>
+
+
+<div class="logo-and-searchbox">
     <div class="homegoods-logo">
         <img src="homegoods-logo.png" alt="HomeGoods logo">
     </div>
+    <div class="search-box">
+            <input type="text" placeholder="Search">
+            <span class="bar">|</span>
+            <img src="mg.png" class="search-icon"></span>
+    </div>
+</div>       
+        
+    
+
+
 
     <div class="homegoods-options">
         <ul>
